# pdf-ocrer

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  config.example.toml  naming_prompt.txt  pyproject.toml
.github/workflows/: release.yml
docs/plans/: 2026-07-03-implementation-plan.md  2026-07-04-settings-dialog-gui-plan.md  2026-07-04-settings-dialog-task-brief.md  2026-07-08-stage1-engine-task-brief.md  2026-07-08-stage1-wo10-bench-task-brief.md  2026-07-08-stage2-quality-task-brief.md  2026-07-08-stage3-scan-incremental-task-brief.md  2026-07-08-stage4-parallel-task-brief.md  2026-07-08-stage5-watch-task-brief.md
docs/specs/: 2026-07-03-pdf-ocrer-design.md  2026-07-09-gpu-model-type-spec.md  benchmark-results.md  paddleocr-api-facts.md  rapidocr-api-facts.md
packaging/: README.md  build.ps1  config.installer.toml  entry_gui.py  installer.iss  pdf_ocrer.spec
scripts/: bench_ocr.py
src/pdf_ocrer/: __init__.py  __main__.py  app_logging.py  cli.py  config.py  gui.py  llm_namer.py  llm_providers.py  manifest.py  ocr_engine.py  parallel.py  pdf_processor.py  pipeline.py  rapidocr_engine.py  scanning.py  (+3 more)
tests/: conftest.py  fixtures_gen.py  test_app_logging.py  test_cli.py  test_config.py  test_fixtures_gen.py  test_gui.py  test_integration.py  test_llm_namer.py  test_llm_providers.py  test_manifest.py  test_ocr_engine.py  test_packaging.py  test_parallel.py  test_pdf_processor.py  test_pipeline.py  test_rapidocr_engine.py  test_scanning.py  test_settings_dialog.py  test_settings_dialog_logic.py  test_watcher.py  test_worker.py
